--- a/src/components/imageSlider/imageSlider.module.css
+++ b/src/components/imageSlider/imageSlider.module.css
@@ -1,62 +1,62 @@
+
+
+/* Main Container  */
 .mainContainer {
-    width: 500px;
-    height: 280px;
-    margin: 0 auto;
-}
-
-.mainContainer ul, li {
-    list-style: none;
-    white-space: nowrap;
-}
-
-
-.mainContainer li {
-    display: inline;
-}
-
-
-.mainContainer img {
-    margin-top: -16px;
-}
-
-
-.sliderContainer {
+    width: 60%;
+    height: 85%;
+    /* border: 2px solid red; */
     position: relative;
-    height: 100%
 }
 
 
+/* Image container  */
 .imagesContainer {
     width: 100%;
     height: 100%;
     border-radius: 20px;
     border: 1px solid #eee;
     overflow: hidden;
+    /* position: relative; */
 }
 
 
-
+/* Arrows  */
 .leftArrow {
     position: absolute;
     top: 50%;
     transform: translate(0, -50%);
-    left: 32px;
     font-size: 50px;
     font-weight: 700;
     color: #fff;
-    z-index: 1;
+    z-index: 10;
     cursor: pointer;
+    margin-left: 25px;
 }
 
 
 .rightArrow {
     position: absolute;
     top: 50%;
-    transform: translate(0, -50%);
-    right: 32px;
+    right: 0;
     font-size: 50px;
+    transform: translate(0, -50%);
     font-weight: 700;
     color: #fff;
-    z-index: 1;
+    z-index: 10;
     cursor: pointer;
+    margin-right: 25px;
 }
+
+.leftArrow:Active , .rightArrow:active {
+    color: #ffea2a;
+}
+
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the image fits inside the container without distortion */
+    transition: opacity 0.5s ease-in-out; /* Smooth transition for opacity */
+    opacity: 1;
+}
+
